Fix nav bar overlapping mobile name with top margin

--- a/guhub/src/pages/BrainLanding.css
+++ b/guhub/src/pages/BrainLanding.css
@@ -392,6 +392,7 @@
   flex-direction: column;
   line-height: 0.85;
   margin-bottom: 1.5rem;
+  margin-top: 2rem;
 }
 
 .mobileNameFirst {
